[project]
name = "coding-with-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.8",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
